--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+  padding: 0px;
+  margin: 0px;
+  background-color: #212121;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
