--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,7 +1,7 @@
-nav.navbar{
-position: fixed;
-z-index: 99;
-width: 100%;
+nav.navbar {
+  position: fixed;
+  z-index: 99;
+  width: 99%;
 }
 nav.navbar-expand-sm {
   padding-top: 30px;
@@ -13,15 +13,15 @@ nav.navbar-expand-sm {
   padding-bottom: 0;
 }
 form.d-flex {
-  padding: 20px;
+  padding-bottom: 25px;
 }
-h1{
-    color:#fff;
-    font-size: 40px;
-    font-family: 'Roboto';
+h1 {
+  color: #fff;
+  font-size: 40px;
+  font-family: "Roboto";
 }
-h1.container--titre{
-    color:#fff;
+h1.container--titre {
+  color: #fff;
 }
 div.collection {
   width: 50%;
@@ -35,29 +35,137 @@ div.collection img {
   padding: 2px;
   height: 30%;
 }
-.collection--img{
-    height: 25%;
+.collection--img {
+  height: 25%;
 }
-.hero {
-  color: #00ff00;
-}
-div.d-flex.row {
+div.dflexrow {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.6);
   bottom: 24%;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 40px;
   font-weight: 900;
 }
-div.card{
-    margin-top: 10px;
-    color: #fff;
-    border: none;
+div.card {
+  margin-top: 10px;
+  color: #fff;
+  border: none;
 }
-div.card{
-    width: 70%;
+div.card {
+  width: 100%;
 }
-div.cardlist{
+div.cardlist {
+  margin: 10rem 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+li.breadcrumb-item a {
+  text-decoration: none;
+  color: #fff;
+}
+nav.navbar-sous {
+  margin-top: 5.7rem;
+  color: #fff;
+  font-weight: none;
+}
+img{
+  object-fit: cover;
+}
+div.container-heroset {
+  width: 98%;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+div.heroset--image {
+  width: 100%;
+}
+div.heroset--image img {
+  width: 100%;
+}
+
+/* #cont { */
+/* width: 100px; */
+/* height: 50px; */
+/* text-align: center; */
+/* } */
+
+.heroset--text {
+  height: 100%;
+  width: 80%;
+  padding: 20px 20px;
+  margin:auto 40px;
+  border: #fff solid 2px;
+  clip-path: polygon(60% 0, 100% 0, 100% 60%, 75% 100%, 0 100%, 0 35%, 28% 0);
+}
+.heroset--text p {
+  color: #fff;
+  font: " RobotoCondensed", "Trebuchet MS", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-stretch: normal;
+  font-size: 26px;
+  line-height: 1;
+  padding-left: 30px;
+  text-transform: uppercase;
+  padding-top: 50px;
+  text-align: left;
+}
+
+div.contanaire-image-auteur.contenaire-card{
+  
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 5% auto;
+  border: #fff solid 2px;
+  clip-path: polygon(60% 0, 100% 0, 100% 60%, 75% 100%, 0 100%, 0 35%, 28% 0);
+}
+div.card-body{
+  /* width: 50%; */
+  font-weight: 400;
+  font-family: 'Roboto'sans-serif;
+}
+
+.img-auteur{
+  color:#fff;
+  width: 100%;
+}
+@media (max-width: 360px) {
+  form.d-flex {
+    width: 90%;
+    position: fixed;
+  }
+  nav {
+    width: 90%;
+    position: fixed;
+  }
+  nav.navbar-sous {
+    width: 80%;
+    margin-top: 70px;
+  }
+  p.card-text {
+    display: none;
+  }
+  div.bg-image.p-5 {
+    width: 90% !important;
+    background-size: cover !important;
+    background-position: center !important;
+  }
+  div.cardlist {
+    margin-top: 5px;
+    margin-bottom: 5px;
     display: flex;
-    
+    flex-direction: column;
+    max-width: 100%;
+  }
+  /* h1{ */
+  /* margin-top: 5px; */
+  /* } */
+  /* ol.breandcrund{ */
+  /* } */
 }
