feat:recuperer les informatio,

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,26 +1,23 @@
-
-nav.parentnav{
+nav.parentnav {
   position: fixed;
   z-index: 99;
   width: 99%;
 }
 nav.enfant {
   position: fixed;
-  max-width: 100%!important;
+  max-width: 100% !important;
   margin-top: 1rem;
   font-weight: none;
   font-weight: 800;
-
 }
 nav.navbar-expand-sm {
   padding-top: 30px;
-
 }
 a.active {
   border-bottom: 5px solid #e63922;
-  transition: all .5s ease;;
+  transition: all 0.5s ease;
 }
-a.current-sous{
+a.current-sous {
   color: #e63922;
 }
 .navbar {
@@ -55,7 +52,7 @@ div.collection img {
 }
 div.dflexrow {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.6);
+  /* background-color: rgba(0, 0, 0, 0.6); */
   bottom: 24%;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 40px;
@@ -69,19 +66,39 @@ div.card {
 div.card {
   width: 100%;
 }
+i.icon-lecteur {
+  position: absolute;
+  z-index: 4;
+  margin: 0;
+  top:20vh;
+  left: 5vw;
+  transform: translateY(50%);
+  color: #ffcd00;
+  background: transparent;
+  transition: all 0.5ms linear;
+  transform: scale(1.3);
+}
+i.icon-lecteur:hover{
+  color: yellowgreen;
+  
+}
+
 div.cardlist {
-  margin: 10rem 5rem;
+  margin: 8rem 15rem !important;
   display: flex;
-  justify-content: center;
-  align-items: center;
+
+  gap: 25px;
 }
 li.breadcrumb-item a {
   text-decoration: none;
   color: #fff;
 }
-
-img{
+div.image-film {
+  width: 100%;
+}
+img {
   object-fit: cover;
+  width: auto;
 }
 div.container-heroset {
   width: 98%;
@@ -97,17 +114,11 @@ div.heroset--image img {
   width: 100%;
 }
 
-/* #cont { */
-/* width: 100px; */
-/* height: 50px; */
-/* text-align: center; */
-/* } */
-
 .heroset--text {
   height: 100%;
   width: 80%;
   padding: 20px 20px;
-  margin:auto 40px;
+  margin: auto 40px;
   border: #fff solid 2px;
   clip-path: polygon(60% 0, 100% 0, 100% 60%, 75% 100%, 0 100%, 0 35%, 28% 0);
 }
@@ -125,8 +136,7 @@ div.heroset--image img {
   text-align: left;
 }
 
-div.contanaire-image-auteur.contenaire-card{
-  
+div.contanaire-image-auteur.contenaire-card {
   width: 30%;
   display: flex;
   flex-direction: column;
@@ -136,14 +146,14 @@ div.contanaire-image-auteur.contenaire-card{
   border: #fff solid 2px;
   clip-path: polygon(60% 0, 100% 0, 100% 60%, 75% 100%, 0 100%, 0 35%, 28% 0);
 }
-div.card-body{
+div.card-body {
   /* width: 50%; */
   font-weight: 400;
-  font-family: 'Roboto'sans-serif;
+  font-family: "Roboto" sans-serif;
 }
 
-.img-auteur{
-  color:#fff;
+.img-auteur {
+  color: #fff;
   width: 100%;
 }
 @media (max-width: 360px) {
