--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,22 @@
-*{
+* {
   box-sizing: border-box;
   padding: 0px;
   margin: 0px;
-  /*    ///212121;212529 */
+  /* ///212121;212529*/
   background-color: #212529;
   color: #fff;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
