--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "Nicla";
+  src: url("./font/Nicla\ DEMO.ttf");
+}
 * {
   box-sizing: border-box;
   padding: 0px;
@@ -31,6 +35,7 @@ div.navigation {
   margin-bottom: 10px;
   border-radius: 25px;
   font-weight: 500;
+  font-size: 1rem;
 }
 .list-inline-item .btn-outline-info:hover {
   color: #fff;
@@ -61,9 +66,9 @@ a {
 }
 
 .active {
-  background-color: #fff;
-  color: #212529 !important;
-  padding: 5px 5px;
+  background-color: #fe9d3d;
+  color: #000 !important;
+  padding: 0px 5px;
   border-radius: 5px;
 }
 
@@ -90,11 +95,11 @@ tr.datacompanie {
 input#inputrecherch {
   border: solid #fff;
   border-radius: 25px;
-  padding: 10px 10px;
+  padding: 5px 5px;
   font-size: 20px;
   font-weight: bolder;
   outline: none;
-  color: #212529;
+  color: #000;
   background-color: #f3f3f3;
   /* background-image: url("./image/load1.jpeg"); */
 
@@ -105,9 +110,9 @@ input#inputrecherch {
 
 } */
 img#input {
-  position: fixed;
-  width: 49px;
-  height: 49px;
+  /* position: fixed; */
+  width: 40px;
+  height: 40px;
   background: transparent;
   margin-left: -60px;
   animation: 1s sprin infinite;
@@ -119,11 +124,23 @@ img#input {
     transform: rotate(360deg);
   }
 }
-/* @keyframes tourn {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-} */
+
+div.presentation h2 {
+  font-family: "Nicla";
+  font-size: 2rem;
+  font-weight: 500;
+}
+span.suffixe {
+  font-family: "Nicla";
+  background-color: #fe9d3d;
+  color: #000;
+}
+div.presentation p {
+  color: #5a6060;
+  font-size: 1rem;
+}
+span.porto{
+  font-size: 1rem!important;
+  color: #5a6060!important;
+
+}
