--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   margin: 0px;
   /* ///212121;212529*/
   background-color: #212529;
+  /* background-color: #fff; */
   color: #fff;
   font-family: "Roboto";
 }
